Add link to pikachu_sandwich.html

--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@
         <title>Odin Recipes</title>
     </head>
     <h1>Odin Recipes</h1>
+    <a href="./recipes/pikachu_sandwich.html">Pikachu Sandwich</a>
 </html>
