Add basic content to recipe page
Follow instructions as per theodinproject.com
recipe project.

[Ticket: X]

--- a/recipes/pikachu_sandwich.html
+++ b/recipes/pikachu_sandwich.html
@@ -5,4 +5,24 @@
         <title>Pikachu Sandwich</title>
     </head>
     <h1>Pikachu Sandwich</h1>
+    <img src="../img/pikachu_eating_sandwich.gif" alt="a cute gif of pikachu eating a sanwich">
+    <h2>Description</h2>
+    <p>What could be better than a freshly made sandwich? How about a 
+        freshly caught pikachu eating said sandwich? Lets two-birds-one-stone 
+        this recipe so you can can see your new friend in sandwich-enjoying bliss!</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Pokeballs</li>
+        <li>Tall grass</li>
+        <li>A starter pokemon (and you had better have chosen charmander)</li>
+        <li>A sandwich</li>
+    </ul>
+    <ol>
+        <li>Walk through grass until wild pikachu appears</li>
+        <li>Call out your starter pokemon</li>
+        <li>Use damage inflicting attacks to lower pikachu's health</li>
+        <li>Throw a pokeball at the wild pikachu</li>
+        <li>You have captured a wild pikachu! Now call it out a give it a well deserved sandwich</li>
+        <li>Chu! ~~</li>
+    </ol>
 </html>
